--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -23,9 +23,9 @@ server:
 
 springfox:
   documentation:
-    swagger:
-      v2:
-        enabled: true
+    open-api:      enabled: false #disable openapi3 core, all specs are openapi2 
+    enabled: true
+
 
 spring:
   main:
@@ -103,10 +103,12 @@ santalucia:
           base-packages: com.santalucia.example.infrastructure.mybatis.primary
         secondary:
           base-packages: com.santalucia.example.infrastructure.mybatis.secondary      security:
-        core:          enabled: false        cors:          enabled: false
+        core:          enabled: true        cors:          enabled: false
           #allowed-origins: https://example.com
           #allowed-methods: GET, POST
         csrf:          enabled: false
+        xss:
+          enabled: true        
         oauth2:          token-propagation: true
            
         #actuator:        #  unsecure-end-points:
