--- a/src/main/resources/bootstrap.yaml
+++ b/src/main/resources/bootstrap.yaml
@@ -1,6 +1,10 @@
 debug: false # Enable debug logs.
 trace: false # Enable trace logs.
 
+management:
+  metrics:
+    tags:
+       application: ${spring.application.name} #Needed by micrometer +1.1.0
 
 spring:
   application:
