--- a/src/main/resources/monitoring.yaml
+++ b/src/main/resources/monitoring.yaml
@@ -1,21 +1,12 @@
 management:
-  trace:
-    http:
-      enabled: true # Whether to enable HTTP request-response tracing.
-      include: request-headers,response-headers,cookie-headers # Items to be included in the trace.
-  endpoint:
-    metrics: 
-      enabled: true
+  server:
+    port: 8081
   metrics:
-    tags:
-       application: ${spring.application.name} #Needed by micrometer +1.1.0
     export:
       prometheus:
-        enabled: true   
+        enabled: true
   endpoints:
-    enabled-by-default: true # Whether to enable or disable all endpoints by default.
     web:
       exposure:
        include: "*"
-#      exclude:
-#        include: env,beans
+      base-path: /management
