--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule ".githooks"]
 	path = .githooks
-	url = https://git.santalucia.net/scm/arq/bitbucket-client-side-hooks.git
+	url = https://git.santalucia.net/scm/arq/bitbucket-client-side-hooks
 	branch = master
 	active = true
