--- a/pom.xml
+++ b/pom.xml
@@ -146,9 +146,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
-			<optional>true</optional>
+		 	<optional>true</optional>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/com.github.pagehelper/pagehelper-->
+<!-- 		<dependency> -->
+<!-- 		    <groupId>com.github.pagehelper</groupId> -->
+<!-- 		    <artifactId>pagehelper</artifactId> -->
+<!-- 		    <version>5.2.0</version> -->
+<!-- 		</dependency> -->
 
 	</dependencies>
 
@@ -157,6 +163,20 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			
+			<plugin>
+			    <groupId>io.swagger</groupId>
+			    <artifactId>swagger-codegen-maven-plugin</artifactId>
+			    <executions>
+			        <execution>
+			            <configuration>
+			                <configOptions>
+			                   <importMapping>Pageable=org.springframework.data.domain.Pageable</importMapping>
+			                </configOptions>
+			            </configuration>
+			        </execution>
+			    </executions>
 			</plugin>
 		</plugins>
 
