--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <scm>  
 	  <url>${project.url}</url>
 	  <connection>scm:git:${project.url}</connection>
-	  <developerConnection>${project.url}</developerConnection>
+	  <developerConnection>scm:${project.url}</developerConnection>
 	  <tag>HEAD</tag>
   	</scm>
 
