--- a/pom.xml
+++ b/pom.xml
@@ -18,14 +18,14 @@
 	
 	<scm>  
 	  <url>${project.url}</url>
-	  <connection>${project.url}</connection>
+	  <connection>scm:git:${project.url}</connection>
 	  <developerConnection>${git.santalucia.url}</developerConnection>
 	  <tag>HEAD</tag>
   	</scm>
 
 	<organization>
 		<name>Santalucia Seguros</name>
-		<url>https://https://www.santalucia.es/</url>
+		<url>https://www.santalucia.es/</url>
 	</organization>
 	
 	<contributors>
