--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -12,7 +12,11 @@ spring:
         jdbc-url: jdbc:h2:mem:db-oracle;DB_CLOSE_DELAY=-1;MODE=Oracle
 
 ##En entornos de test no existe datasource de tipo Informix
-santalucia:  ams:    features:      guardium:        enabled: false
+santalucia:
+  ams:
+    features:
+      guardium:
+        enabled: false
 
 helloWorld:
   url: http://localhost:${wiremock.server.port:8089}/hello-world/v1
