--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -71,21 +71,6 @@ spring:
           issuer-uri: https://sso-sldev.santalucia.es/auth/realms/3scale
 
   # Conexion para recuperar agencias en pruebas de componente database
-  datasource:
-    primary:
-      hikari:
-        driver-class-name: com.informix.jdbc.IfxDriver
-        pool-name: InformixCP
-        jdbc-url: jdbc:informix-sqli://192.168.204.226:20101/siis:INFORMIXSERVER=fun_jdbc
-        username: amssms
-        password: Am5Spr1ng5M5
-    secondary:
-      hikari:
-        driver-class-name: oracle.jdbc.OracleDriver
-        pool-name: OracleCP
-        jdbc-url: jdbc:oracle:thin:@slbdorad15.servidores.net:1548/DB12UTF8D.DES.SANTALUCIA.ES
-        username: LAB_ARQ_SW_DEV
-        password: lab_arq_sw_dev
 
 ###########################
 #                         #
@@ -106,7 +91,7 @@ santalucia:
           base-packages: com.santalucia.example.infrastructure.mybatis.secondary
       security:
         core:
-          enabled: true
+          enabled: false
         cors:
           enabled: true
           allowed-origins:
