--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.santalucia.arq.ams</groupId>
     <artifactId>ams-parent-sl-sw</artifactId>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.2.0-SNAPSHOT</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
   <groupId>com.santalucia.example</groupId>
@@ -75,6 +75,11 @@
     <dependency>
       <groupId>com.santalucia.arq.ams</groupId>
       <artifactId>ams-componentes-web</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>com.santalucia.arq.ams</groupId>
+      <artifactId>ams-componentes-feign-security</artifactId>
     </dependency>
 
     <dependency>
