chore: ASW-1115 Actualizar example-app-11 a la versión 6.2 de Spring Boot

--- a/src/test/resources/bootstrap.yaml
+++ b/src/test/resources/bootstrap.yaml
@@ -2,13 +2,25 @@ spring:
   profiles:
     active:
     - test
-
 ---
 spring:
-  profiles: test #Profile para deshabilitar kubernetes
+  config:
+    activate:
+      on-profile: "test"
   cloud:
     kubernetes:
       enabled: false
 
 debug: true # Enable debug logs.
 trace: false # Enable trace logs.
+
+kubernetes:
+  manifests:
+    enabled: false
+  informer:
+    enabled: false
+opentracing:
+  spring:
+    cloud:
+      feign:
+        enabled: false
