chore: ASW-1115 Actualizar example-app-11 a la versión 6.2 de Spring Boot

--- a/src/main/resources/bootstrap.yaml
+++ b/src/main/resources/bootstrap.yaml
@@ -34,12 +34,6 @@ kubernetes:
     enabled: false
   informer:
     enabled: false
-opentracing:
-  spring:
-    cloud:
-      feign:
-        enabled: false
-
 ---
 spring:
   #Profile habilitado de forma automatica cuando se despliega en OCP
@@ -62,6 +56,11 @@ spring:
         monitoring-secrets: false
       config:
         name: ${spring.application.name}
+kubernetes:
+  manifests:
+    enabled: true
+  informer:
+    enabled: true
 debug: false # Enable debug logs.
 trace: false # Enable trace logs.
 ---
