--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   </parent>
   <groupId>com.santalucia.example</groupId>
   <artifactId>example-app-11</artifactId>
-  <version>2.3.0-SNAPSHOT</version>
+  <version>2.3.1-SNAPSHOT</version>
   <name>example-app-11</name>
   <description>Demo project for Spring Boot</description>
 
@@ -156,7 +156,14 @@
       <scope>runtime</scope>
       <optional>true</optional>
     </dependency>
-
+    
+    <!-- Clientes APIs -->
+    <dependency>
+      <groupId>com.santalucia.arq.ams.odl.recibos</groupId>
+      <artifactId>recibos-odl-api-client</artifactId>
+      <version>2.0.2-RELEASE</version>
+    </dependency>
+    
   </dependencies>
 
   <build>
