chore: added comment for OAS version support

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -47,6 +47,14 @@ server:
   ssl:
     enabled: false
 
+###########################################################
+#                                                         #
+# springdoc properties                                    #
+#                                                         #
+# WARNING! springdoc solo soporta OpenAPI Specification 3 #
+# deshabilitar en caso de que se utilice otra versión     #
+#                                                         #
+###########################################################
 springdoc:
   api-docs:
     enabled: true
