--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   </parent>
   <groupId>com.santalucia.example</groupId>
   <artifactId>example-app-11</artifactId>
-  <version>2.3.1-SNAPSHOT</version>
+  <version>2.3.2-SNAPSHOT</version>
   <name>example-app-11</name>
   <description>Demo project for Spring Boot</description>
 
@@ -91,7 +91,7 @@
       <groupId>com.santalucia.arq.ams</groupId>
       <artifactId>ams-starter-observability</artifactId>
     </dependency>
-    
+
     <dependency>
       <groupId>com.santalucia.arq.ams</groupId>
       <artifactId>ams-componentes-springdoc</artifactId>
@@ -156,7 +156,7 @@
       <scope>runtime</scope>
       <optional>true</optional>
     </dependency>
-    
+
     <!-- Clientes APIs
     <dependency>
       <groupId>com.santalucia.arq.ams.odl.recibos</groupId>
@@ -164,7 +164,7 @@
       <version>2.0.2-RELEASE</version>
     </dependency>
      -->
-    
+
   </dependencies>
 
   <build>
@@ -172,6 +172,14 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+      <!--TODO: Solo para probar indicidencia ASW1279. Eliminar -->
+      <plugin>
+        <groupId>com.societegenerale.commons</groupId>
+        <artifactId>arch-unit-maven-plugin</artifactId>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
       </plugin>
     </plugins>
 
